Unit test refactor - a lot of tests that use services, but don't require the server now have been moved from Integration tests into Tests

--- a/Netsy.Test/Netsy.Test.csproj
+++ b/Netsy.Test/Netsy.Test.csproj
@@ -86,6 +86,10 @@
     <Compile Include="DataModel\TagCategoryParseTest.cs" />
     <Compile Include="DataModel\UserCreateTest.cs" />
     <Compile Include="DataModel\UserParseTest.cs" />
+    <Compile Include="Services\FavoritesTests\GetFavorersOfListingTest.cs" />
+    <Compile Include="Services\FavoritesTests\GetFavorersOfShopTest.cs" />
+    <Compile Include="Services\FavoritesTests\GetFavoriteListingsOfUserTest.cs" />
+    <Compile Include="Services\FavoritesTests\GetFavoriteShopsOfUserTest.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Helpers\DateTimeHelpersTest.cs" />
     <Compile Include="Helpers\EnumHelpersTest.cs" />
@@ -101,12 +105,38 @@
     <Compile Include="Requests\MockFixedDataRequestGenerator.cs" />
     <Compile Include="Services\FavoritesServiceTest.cs" />
     <Compile Include="Services\FeedbackServiceTest.cs" />
+    <Compile Include="Services\FeedbackTests\GetFeedbackAsBuyerTest.cs" />
+    <Compile Include="Services\FeedbackTests\GetFeedbackAsSellerTest.cs" />
+    <Compile Include="Services\FeedbackTests\GetFeedbackForOthersTest.cs" />
+    <Compile Include="Services\FeedbackTests\GetFeedbackForUserTest.cs" />
+    <Compile Include="Services\FeedbackTests\GetFeedbackTest.cs" />
     <Compile Include="Services\GiftServiceTest.cs" />
+    <Compile Include="Services\GiftsTests\GetGiftGuideListingsTest.cs" />
+    <Compile Include="Services\GiftsTests\GetGiftGuidesTest.cs" />
     <Compile Include="Services\ListingServiceTest.cs" />
+    <Compile Include="Services\ListingsTests\GetAllListingsTest.cs" />
+    <Compile Include="Services\ListingsTests\GetFrontFeaturedListingsTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingDetailsTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingsByCategoryTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingsByColorAndKeywordsTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingsByColorTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingsByKeywordTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingsByMaterialsTest.cs" />
+    <Compile Include="Services\ListingsTests\GetListingsByTagsTest.cs" />
     <Compile Include="Services\ServerServiceTest.cs" />
+    <Compile Include="Services\ServerTests\GetMethodTableTest.cs" />
+    <Compile Include="Services\ServerTests\PingTest.cs" />
+    <Compile Include="Services\ServerTests\ServerEpochTest.cs" />
+    <Compile Include="Services\ServiceCreationHelper.cs" />
     <Compile Include="Services\ShopServiceTest.cs" />
     <Compile Include="Services\TagCategoryServiceTest.cs" />
+    <Compile Include="Services\TagCategoryTests\GetChildCategoriesTest.cs" />
+    <Compile Include="Services\TagCategoryTests\GetChildTagsTest.cs" />
+    <Compile Include="Services\TagCategoryTests\GetTopCategoriesTest.cs" />
+    <Compile Include="Services\TagCategoryTests\GetTopTagsTest.cs" />
     <Compile Include="Services\UsersServiceTest.cs" />
+    <Compile Include="Services\UsersTests\GetUserDetailsTest.cs" />
+    <Compile Include="Services\UsersTests\GetUsersByNameTest.cs" />
     <Compile Include="TestHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
