--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -77,10 +77,10 @@
     <Compile Include="DispatchedServices\DispatchedShopService.cs" />
     <Compile Include="DispatchedServices\DispatchedTagCategoryService.cs" />
     <Compile Include="DispatchedServices\DispatchedUsersService.cs" />
+    <Compile Include="DispatcherHelper.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SilverlightDispatcherHelper.cs" />
     <Compile Include="ValueConverters\WidthToColumnCountValueConverter.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\Listings\ColorKeywordsListingsViewModel.cs" />
