Updated website - MVC controls for the silverlight

--- a/DemoWebsite/NetsyDemo.csproj
+++ b/DemoWebsite/NetsyDemo.csproj
@@ -67,12 +67,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\NetsySilverlightModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Scripts\Silverlight.js" />
     <Content Include="Views\Shared\NetsySilverlight.ascx" />
+    <Content Include="Views\Shared\SilverlightErrorHandler.ascx" />
     <Content Include="Web.config" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.4.1.js" />
