--- a/Silverlight/Netsy.Shop/Netsy.Shop.csproj
+++ b/Silverlight/Netsy.Shop/Netsy.Shop.csproj
@@ -12,7 +12,7 @@
     <RootNamespace>Netsy.Shop</RootNamespace>
     <AssemblyName>Netsy.Shop</AssemblyName>
     <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
     <SilverlightApplication>true</SilverlightApplication>
     <SupportedCultures>
@@ -31,6 +31,7 @@
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
     <LinkedServerProject>
     </LinkedServerProject>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <!-- This property group is only here to support building this project using the 
        MSBuild 3.5 toolset. In order to work correctly with this older toolset, it needs 
@@ -60,6 +61,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.Unity">
+      <HintPath>..\Libraries\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
@@ -74,10 +78,15 @@
     </Compile>
     <Compile Include="AppSettings.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Locator.cs" />
     <Compile Include="ShopControl.xaml.cs">
       <DependentUpon>ShopControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShopControlViewModel.cs" />
+    <Compile Include="ShopDetailsCommand.cs" />
+    <Compile Include="ShopListingsCommand.cs" />
+    <Compile Include="UnityHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -91,6 +100,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AppManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Netsy.UI\Silverlight.Netsy.UI.csproj">
+      <Project>{7CE18D14-D4C5-4A24-84E4-C3F81CAAB6DE}</Project>
+      <Name>Silverlight.Netsy.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Netsy\Silverlight.Netsy.csproj">
+      <Project>{B979E9E0-EB45-47F3-8DA7-307546B8515E}</Project>
+      <Name>Silverlight.Netsy</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
