--- a/Silverlight/Netsy.Listings.Web/Netsy.Listings.Web.csproj
+++ b/Silverlight/Netsy.Listings.Web/Netsy.Listings.Web.csproj
@@ -11,7 +11,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Netsy.Favorites.Web</RootNamespace>
     <AssemblyName>Netsy.Favorites.Web</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <SilverlightApplicationList>{3B3AB3F6-6709-4E22-B8F1-CAC8F373D4B6}|..\Netsy.Favorites\Netsy.Favorites.csproj|ClientBin|False,{BFC38AC6-E862-4453-9B74-ADC9CFFAE605}|..\Netsy.Shop\Netsy.Shop.csproj|ClientBin|False</SilverlightApplicationList>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>
@@ -21,6 +21,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,6 +34,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <PackageAsSingleFile>false</PackageAsSingleFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -46,18 +48,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Web.Extensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.DynamicData" />
+    <Reference Include="System.Web.Entity" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
@@ -65,6 +60,7 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\..\CodeAnalysisDictionary.xml">
@@ -72,6 +68,7 @@
     </CodeAnalysisDictionary>
     <Content Include="ClientBin\Netsy.Listings.xap" />
     <Content Include="ClientBin\Netsy.Shop.xap" />
+    <Content Include="ShopControl.html" />
     <Content Include="ShopListings.html" />
     <Content Include="FrontListings.html" />
     <Content Include="FrontListingsByCategory.html" />
@@ -85,20 +82,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Netsy.UI\Silverlight.Netsy.UI.csproj">
-      <Project>{7CE18D14-D4C5-4A24-84E4-C3F81CAAB6DE}</Project>
-      <Name>Silverlight.Netsy.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Netsy\Silverlight.Netsy.csproj">
-      <Project>{B979E9E0-EB45-47F3-8DA7-307546B8515E}</Project>
-      <Name>Silverlight.Netsy</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Netsy.Listings\Netsy.Listings.csproj">
-      <Project>{3B3AB3F6-6709-4E22-B8F1-CAC8F373D4B6}</Project>
-      <Name>Netsy.Listings</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
