Updated to use Unity 2.0 in WPF and Silverlight code

--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -55,8 +55,8 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.Unity">
-      <HintPath>..\Silverlight\Libraries\Microsoft.Practices.Unity.dll</HintPath>
+    <Reference Include="Microsoft.Practices.Unity.Silverlight">
+      <HintPath>..\Silverlight\Libraries\Microsoft.Practices.Unity.Silverlight.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel.Web" />
